--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                           Produtos
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Frutas e Vegetais</a></li>
-                          <li><a class="dropdown-item" href="#">Cesta Básica</a></li>
-                          <li><a class="dropdown-item" href="#">Bebidas</a></li>
-                          <li><a class="dropdown-item" href="#">Snacks</a></li>
-                          <li><a class="dropdown-item" href="#">Limpeza</a></li>
-                          <li><a class="dropdown-item" href="#">Beleza e Higiene</a></li>
-                          <li><a class="dropdown-item" href="#">Casa e Cozinha</a></li>     
+                          <li><a class="dropdown-item" href="#frutasA">Frutas e Vegetais</a></li>
+                          <li><a class="dropdown-item" href="#cbA">Cesta Básica</a></li>
+                          <li><a class="dropdown-item" href="#bebidasA">Bebidas</a></li>
+                          <li><a class="dropdown-item" href="#snacksA">Snacks</a></li>
+                          <li><a class="dropdown-item" href="#limpezaA">Limpeza</a></li>
+                          <li><a class="dropdown-item" href="#belezaA">Beleza e Higiene</a></li>
+                          <li><a class="dropdown-item" href="#ccA">Casa e Cozinha</a></li>     
                           <li><hr class="dropdown-divider"></li>
                           <li><a class="dropdown-item" href="#">Pães de Sal</a></li>
                         </ul>
@@ -117,7 +117,7 @@
     <!-- <------------------------------------------------Top offer end  ------------------------------------------------>
 
     <!-- <------------------------------------------------Fruits and vegitables start  ------------------------------------------------>
-
+<div id="frutasA">
     <h3>Frutas e Vegetais</h3>
     <hr>
     <div id="fruits">
@@ -141,9 +141,11 @@
                     alt=""></div>
         </div>
     </div>
+
+</div>
     <!-- <------------------------------------------------Fruits and vegitables end  ------------------------------------------------>
     <!-- <------------------------------------------------Your Daily Staples start  ------------------------------------------------>
-
+<div id="cbA">
     <h3>Cesta Básica</h3>
     <hr>
     <div id="stapels">
@@ -166,9 +168,9 @@
                 src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/851f102d-65b9-40b4-8a04-a6cffc905dd9/t1_hp_fom_herbs-seasoning_staplesStorefront_m_480_250622_06.jpg"
                 alt=""></div>
     </div>
-
+</div>
     <!-- <------------------------------------------------Beverages Staples start  ------------------------------------------------>
-
+<div id="bebidasA">
     <h3>Bebidas</h3>
     <hr>
     <div id="fruits">
@@ -192,8 +194,10 @@
                     alt=""></div>
         </div>
     </div>
-
+</div>
+  
     <!-- <------------------------------------------------Snack Store start  ------------------------------------------------>
+  <div id="snacksA">
     <h3>Snacks</h3>
     <hr>
     <div id="stapels">
@@ -210,8 +214,9 @@
                 src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/aa2bed29-6b8e-4781-9677-0f34fd1351e0/t1_hp_sbf_hp_biscuits-cookies_m_480_250622_04.jpg"
                 alt=""></div>
     </div>
+</div>
     <!-- <------------------------------------------------Cleaning & Household  ------------------------------------------------>
-
+<div id="limpezaA">
     <h3>Limpeza</h3>
     <hr>
     <div id="stapels">
@@ -228,9 +233,9 @@
                 src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/e5311afa-b983-48fd-b151-5d1e28768962/t1_hp_cmc_fresheners_repellents_cleaningStorefront_m_480_250622_04.jpg"
                 alt=""></div>
     </div>
-
+</div>
     <!-- <------------------------------------------------Beauty & Hygiene  ------------------------------------------------>
-
+<div id="belezaA">
     <h3>Beleza e Higiene</h3>
     <hr>
     <div id="fruits">
@@ -255,8 +260,10 @@
                     alt=""></div>
         </div>
     </div>
-    <!-- <------------------------------------------------Home & Kitchen Essentials  ------------------------------------------------>
 
+</div>
+    <!-- <------------------------------------------------Home & Kitchen Essentials  ------------------------------------------------>
+<div id="ccA">
     <h3>Casa e Cozinha</h3>
     <hr>
     <div id="stapels">
@@ -279,6 +286,8 @@
                 src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/54ad3b4b-d82e-44fa-a4ce-b9a1bf67e1e3/hp_GMStorefront(Post10th)_m_250622_06.jpg"
                 alt=""></div>
     </div>
+</div>
+    
     <!-- <------------------------------------------------ Image slider  ------------------------------------------------>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
